# neural-scattering-prediction

./: .flake8  CMakeLists.txt  Dockerfile  Makefile  README.md  pyproject.toml  setup.py  vdb_view.py
config/: train_nn_prediction_config_3d_first_cubic.json  train_nn_prediction_config_3d_level_shared.json  train_nn_prediction_config_3d_radial_symmetry_2.json  train_nn_prediction_config_3d_radial_symmetry_4_level_shared.json  train_nn_prediction_config_planar_first_cubic.json  train_nn_prediction_config_planar_level_shared_cubic.json  train_nn_prediction_config_planar_radial_symmetry.json  train_nn_prediction_config_planar_radial_symmetry_2.json  train_nn_prediction_config_planar_radial_symmetry_3.json
fabnn/: collect_dataset_metadata.py  dataset_utils.py  downscale.cpp  fill_3d_dataset_fields.py  label_grid.py  materials.py  pad_volume.py  predict.py  predict_dataset.py  predict_one_3d.py  predict_one_planar.py  scales.py  summed_area_table.py  train.py  vdb_view.py
fabnn/callbacks/: tensorboard.py
fabnn/colorspaces/: __init__.py  cmykw_to_rgb.cpp  cmykw_to_rgb.py  color_cube.py  colorspace_conversion.h  convert_rgb_to_cmykw_from_pickle_to_bin.py  project_to_gamut.py  project_to_gamut_Vahid.py  render_thickness_gamut.py  rgb_to_cmykw_mapping.hpp  test_colorspace_conversion.cpp
fabnn/data_storage/: __init__.py  data.py  data_3d.py  data_planar.py
fabnn/layers/: albedo_mapping_channel.py  channel_crossing.py  euclidian_distance_channel.py  input_preprocess_channel.py
fabnn/models/: __init__.py  first_baseline.py  level_shared.py  planar_radial_symmetry.py  planar_radial_symmetry_2.py  planar_radial_symmetry_3.py  utils.py  x3d_radial_symmetry_2.py  x3d_radial_symmetry_3_level_shared.py  x3d_radial_symmetry_4_level_shared.py
fabnn/tests/: plot_homogeneous_media.py  test_average_octree.py  test_average_octree_real_volume.py  test_downscale.py  test_generate_scales_cpp.py  test_generate_scales_cpp_padding.py  test_sat_tile_tree.py  test_sat_tile_tree_real_volume.py  test_sat_tile_tree_train_time.py
fabnn/tree/: average_octree.cpp  bounding_box.h  debug_minipool.cpp  gtest_float.h  minipool.hpp  sat_tile_tree.cpp
fabnn/utils/: __init__.py  difference_metrics.py  mitsuba.py  report.py
