[tool.poetry]
name = "fabnn"
version = "0.1.0"
description = ""
authors = ["Denis Sumin <da.sumin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "~1.18"
pandas = "~0.25"
scikit-learn = "~0.22"
matplotlib = "^3.0"
PyYAML = "^5.3"
psutil = "^5.8.0"
OpenEXR = "^1.3.2"
scikit-image = "~0.17"
pdfrw = "^0.4"
reportlab = "^3.5.67"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 98
target-version = ["py36"]
include = ".pyi?$"
exclude = ".*/migrations/.*"

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
forced_separate = "tests,tests_backend"
include_trailing_comma = true
known_third_party = "graph_tool"
line_length = 98
multi_line_output = 3
profile = "black"
skip = "migrations"
use_parentheses = true
