[tool.poetry]
name = "fabnn"
version = "0.1.0"
description = ""
authors = ["Denis Sumin <da.sumin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.20.2"
pandas = "^1.2.4"
scikit-learn = "^0.24.1"
matplotlib = "^3.4.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 98
target-version = ["py36"]
include = ".pyi?$"
exclude = ".*/migrations/.*"

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
forced_separate = "tests,tests_backend"
include_trailing_comma = true
known_third_party = "graph_tool"
line_length = 98
multi_line_output = 3
profile = "black"
skip = "migrations"
use_parentheses = true
